# util

./: CMakeLists.txt  LICENSE  README.md  install.sh  run-all-tests.sh
.github/workflows/: linux.yml
Tests/: Buffer.cpp  CMakeLists.txt  Color.cpp  ColorScale.cpp  CoordinateSystem.cpp  DynamicArray2D.cpp  Error.cpp  GenericParser.cpp  Matrix.cpp  ScopeGuard.cpp  Stream.cpp  Suite.hpp  UString.cpp  UStringBuilder.cpp  UnitDisplay.cpp  Vector.cpp
Util/: Angle.hpp  Buffer.cpp  Buffer.hpp  Color.cpp  Color.hpp  Concepts.hpp  Config.hpp  CoordinateSystem.hpp  DisplayError.cpp  DisplayError.hpp  DynamicArray2D.hpp  Enum.hpp  EnumBits.hpp  Error.hpp  ErrorMappers.hpp  GenericParser.hpp  Length.hpp  Matrix.hpp  MultidimensionalArray.hpp  Random.hpp  Rect.hpp  Stream.cpp  Stream.hpp  System.cpp  System.hpp  Testing.hpp  UString.cpp  UString.hpp  UStringBuilder.cpp  UStringBuilder.hpp  UnitDisplay.cpp  UnitDisplay.hpp  Units.hpp  Vector.hpp  Vector3.hpp
Util/CoordinateSystem/: Coordinates.hpp  Interoperability.hpp  Point.hpp  Size.hpp  Vector.hpp
Util/Math/: Plane.cpp  Plane.hpp  Ray.hpp
Util/Stream/: File.cpp  File.hpp  MemoryStream.cpp  MemoryStream.hpp  Reader.cpp  Reader.hpp  Stream.hpp  Writer.cpp  Writer.hpp
cmake/: EssaUtilConfig.cmake  utils.cmake
